# shot-fpfh

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
config/: default.yaml
scripts/: parse_args.py  register_point_clouds.py
shot_fpfh/: __init__.py  configuration.py  icp.py  keypoint_selection.py  pipeline.py
shot_fpfh/analysis/: __init__.py  ground_truth_retrieval.py  matches_analysis.py
shot_fpfh/base_computation/: __init__.py  solvers.py  subsampling.py  transformation.py
shot_fpfh/core/: __init__.py  rigid_transform.py  solvers.py  subsampling.py
shot_fpfh/descriptors/: __init__.py  fpfh.py  pca_based_descriptors.py  shot.py  shot_parallelization.py
shot_fpfh/helpers/: io_ply.py  perf_monitoring.py
shot_fpfh/matching/: __init__.py  filters.py  matching.py  ransac.py
shot_fpfh/utils/: __init__.py  io_ply.py  perf_monitoring.py
src/: __init__.py  count_matches.py  fpfh.py  icp.py  io_ply.py  keypoint_selection.py  matching.py  parse_args.py  pca_based_descriptors.py  perf_monitoring.py  pipeline.py  query_points_selection.py  ransac.py  rigid_transform.py  shot.py  shot_parallelization.py  subsampling.py  transformation.py  utils.py
src/analysis/: __init__.py  analyze_matches.py  count_matches.py  retrieve_ground_truth.py
src/base_computation/: rigid_transform.py
src/descriptors/: __init__.py  fpfh.py  pca_based_descriptors.py  shot.py  shot_parallelization.py
src/matching/: filters.py  matching.py  ransac.py
src/utils/: io_ply.py  perf_monitoring.py
