[tool.poetry]
name = "shot-fpfh"
version = "1.1.0"
description = "Implementation of SHOT and FPFH, two 3D descriptors that can be used for point clouds registration."
authors = ["aubin-tchoi <aubin.tchoi@gmail.com>"]
readme = "README.md"
packages = [{include = "shot_fpfh"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
fonttools = "^4.40.0"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
mypy = "^1.11.1"
ruff = "^0.5.7"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
register_point_clouds = "scripts.register_point_clouds:main"
